--- a/workflows/snake.yml
+++ b/workflows/snake.yml
@@ -7,19 +7,24 @@ on:
   push:
     branches: ["main"]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Generate snake.svg
         uses: Platane/snk@v3
         with:
-          github_user_name: YOUR_GITHUB_USERNAME
+          github_user_name: muneeb-anjum0
           outputs: |
             dist/snake.svg
-      - name: Publish to output branch
+
+      - name: Publish snake.svg to output branch
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
