--- a/workflows/metrics.yml
+++ b/workflows/metrics.yml
@@ -1,1 +1,28 @@
+name: GitHub Metrics
+on:
+  schedule:
+    - cron: "30 0 * * *"
+  workflow_dispatch:
 
+jobs:
+  metrics:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate metrics
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: muneeb-anjum0
+          template: classic
+          config_timezone: Asia/Karachi
+          filename: metrics.svg
+          base: header, activity, community, repositories, metadata
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
+          plugin_languages: yes
+          plugin_languages_sections: most-used
+          plugin_languages_limit: 12
+          plugin_languages_details: lines, percentage
+          plugin_topics: yes
+          plugin_topics_sort: stars
+          plugin_topics_mode: icons
