--- a/workflows/recent-activity.yml
+++ b/workflows/recent-activity.yml
@@ -1,1 +1,15 @@
+name: Recent Activity
+on:
+  schedule:
+    - cron: "15 */6 * * *"
+  workflow_dispatch:
 
+jobs:
+  update:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: Readme-Workflows/recent-activity@v2
+        with:
+          GH_USERNAME: muneeb-anjum0
+          COMMIT_MSG: "chore: update recent activity"
+          MAX_LINES: 10
