--- a/workflows/snake.yml
+++ b/workflows/snake.yml
@@ -3,22 +3,26 @@ on:
   schedule:
     - cron: "0 */12 * * *"
   workflow_dispatch:
-  push:
-    branches: ["main"]
+
 permissions:
   contents: write
+
 jobs:
-  build:
+  snake:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: Platane/snk@v3
+
+      - name: Build snake.svg
+        uses: Platane/snk@v3
         with:
           github_user_name: muneeb-anjum0
-          outputs: |
-            dist/snake.svg
-      - uses: peaceiris/actions-gh-pages@v3
+          outputs: dist/snake.svg
+
+      - name: Publish to output branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: output
-          publish_dir: dist
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
