--- a/workflows/metrics.yml
+++ b/workflows/metrics.yml
@@ -4,11 +4,16 @@ on:
     - cron: "30 0 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   metrics:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate metrics
+      - uses: actions/checkout@v4
+
+      - name: Generate metrics.svg
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
@@ -26,3 +31,5 @@ jobs:
           plugin_topics: yes
           plugin_topics_sort: stars
           plugin_topics_mode: icons
+          committer_branch: main
+          committer_message: "chore: update metrics.svg"
