--- a/.github/workflows/recent-activity.yml
+++ b/.github/workflows/recent-activity.yml
@@ -1,4 +1,5 @@
 name: Recent Activity
+
 on:
   schedule:
     - cron: "15 */6 * * *"
@@ -11,8 +12,12 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - uses: Readme-Workflows/recent-activity@v2
         with:
           GH_USERNAME: muneeb-anjum0
           COMMIT_MSG: "chore: update recent activity"
           MAX_LINES: 10
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
