--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,13 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Build snake.svg (Light Mode)
+      - name: Build snake.svg (Light and Dark themes)
         uses: Platane/snk@v3
         with:
           github_user_name: muneeb-anjum0
           outputs: |
-            dist/snake.svg
-            dist/snake-dark.svg?palette=github-dark
+            dist/snake.svg?palette=github-light&color_snake=#000000&color_dots=#ffffff,#f0f0f0,#c0c0c0,#808080,#404040
+            dist/snake-dark.svg?palette=github-dark&color_snake=#ffffff&color_dots=#000000,#1a1a1a,#333333,#666666,#999999
           
       - name: Publish to output branch
         uses: crazy-max/ghaction-github-pages@v4
