--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           github_user_name: muneeb-anjum0
           outputs: |
-            dist/snake.svg?palette=github-light&color_snake=#000000&color_dots=#ffffff,#f0f0f0,#c0c0c0,#808080,#404040
-            dist/snake-dark.svg?palette=github-dark&color_snake=#ffffff&color_dots=#000000,#1a1a1a,#333333,#666666,#999999
+            dist/snake.svg?palette=github-light&color_snake=#666666&color_dots=#ebedf0,#9be9a8,#40c463,#30a14e,#216e39
+            dist/snake-dark.svg?palette=github-dark&color_snake=#c9d1d9&color_dots=#161b22,#0e4429,#006d32,#26a641,#39d353
           
       - name: Publish to output branch
         uses: crazy-max/ghaction-github-pages@v4
